--- a/Kuk.Common/Messages/ValidationMessagesResource.resx
+++ b/Kuk.Common/Messages/ValidationMessagesResource.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="IdGtZero" xml:space="preserve">
+    <value>The Id must be greater than zero</value>
+  </data>
+  <data name="IdNotEmpty" xml:space="preserve">
+    <value>The Id must not be empty</value>
+  </data>
   <data name="InvalidMaxLength" xml:space="preserve">
     <value>The number of characters is more than the allowed amount</value>
   </data>
